<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffd2af"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddProductActivity">


    <TextView
        android:id="@+id/product_text_view"
        style="@style/EditeStyle"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:minWidth="55dp"
        android:text="@string/product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price_text_view"
        style="@style/EditeStyle"
        android:layout_width="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:minWidth="55dp"
        android:text="@string/price_s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_text_view" />

    <TextView
        android:id="@+id/quantity_text_view"
        style="@style/EditeStyle"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:minWidth="55dp"
        android:text="@string/quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_text_view" />

    <TextView
        android:id="@+id/supplier_text_view"
        style="@style/EditeStyle"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/supllier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity_text_view" />

    <TextView
        style="@style/EditeStyle"
        android:layout_marginEnd="136dp"
        android:layout_marginTop="48dp"
        android:gravity="center_vertical"
        android:text="+20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity_text_view"
        android:layout_marginRight="136dp" />

    <TextView
        android:id="@+id/supplier_num_text_view"
        style="@style/EditeStyle"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/supllier_num"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supplier_text_view" />


    <EditText
        android:id="@+id/edit_Product_name"
        style="@style/EditeStyle"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/product_name"
        android:inputType="textCapWords"
        android:minWidth="120dp"
        app:layout_constraintBottom_toBottomOf="@+id/product_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/product_text_view" />

    <EditText
        android:id="@+id/edit_price"
        style="@style/EditeStyle"
        android:layout_width="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:minWidth="120dp"
        app:layout_constraintBottom_toBottomOf="@+id/price_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/price_text_view" />

    <EditText
        android:id="@+id/edit_quantity"
        style="@style/EditeStyle"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:hint="@string/quantity"
        android:inputType="number"
        android:minWidth="120dp"
        app:layout_constraintBottom_toBottomOf="@+id/quantity_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_text_view" />

    <EditText
        android:id="@+id/edit_phone"
        style="@style/EditeStyle"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/phone_num"
        android:inputType="number"
        android:minWidth="120dp"
        app:layout_constraintBottom_toBottomOf="@+id/supplier_num_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_supplier" />

    <Spinner
        android:id="@+id/spinner_supplier"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:paddingRight="16dp"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toBottomOf="@+id/supplier_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_quantity" />

</android.support.constraint.ConstraintLayout>

